--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -8,38 +8,28 @@
         <h3 class="mt-3">Game</h3>
         
         <!--Creating the "all" option for category, which sets category to "all", but checks for the active game.-->
-        <div class="list-group">
-            <a asp-action="Index"
-               asp-route-activeGame="all"
-               asp-route-ActiveCategory="@Model.ActiveCategory"
-               class="list-group-item @Model.CheckActiveGame("all")"> All</a>
-            @foreach (Game game in Model.Games)
-            {
-                <a asp-action="Index"
-                   asp-route-activeGame="@game.GameID"
-                   asp-route-activeCategory="@Model.ActiveCategory"
-                   class="list-group-item
-                   @Model.CheckActiveGame(game.GameID)">
-                    @game.Name
-                </a>
-            }
-        </div>
+        <form asp-action="Index" method="get">
+            <div class="list-group">
+                <input type="hidden" asp-for="ActiveCategory" />
+                <a asp-action="Index" asp-route-activeGame="all" asp-route-activeCategory="@Model.ActiveCategory" class="list-group-item @Model.CheckActiveGame("all")"> All</a>
+                @foreach (Game game in Model.Games)
+                {
+                    <a asp-action="Index" asp-route-activeGame="@game.GameID" asp-route-activeCategory="@Model.ActiveCategory" class="list-group-item @Model.CheckActiveGame(game.GameID)">
+                        @game.Name
+                    </a>
+                }
+            </div>
         <!--Creating selection group for category types (outdoor/indoor).-->
-        <div class="list-group">
             <h3 class="mt-3">Category</h3>
-            <!--Creating the "all" option for game, which sets game to "all", but checks for the active category.-->
-            <a asp-action="Index"
-               asp-route-activeGame="@Model.ActiveGame"
-               asp-route-ActiveCategory="all"
-               class="list-group-item @Model.CheckActiveCategory("all")"> All</a>
-            @foreach (Category category in Model.Categories)
-            {
-                <a asp-action="Index"
-                   asp-route-activeGame="@Model.ActiveGame"
-                   asp-route-activeCategory="@category.CategoryID"
-                   class="list-group-item @Model.CheckActiveCategory(category.CategoryID)"> @category.Name</a>
-            }
-        </div>
+            <div class="list-group">
+                <input type="hidden" asp-for="ActiveGame" />
+                <a asp-action="Index" asp-route-activeGame="@Model.ActiveGame" asp-route-activeCategory="all" class="list-group-item @Model.CheckActiveCategory("all")"> All</a>
+                @foreach (Category category in Model.Categories)
+                {
+                    <a asp-action="Index" asp-route-activeGame="@Model.ActiveGame" asp-route-activeCategory="@category.CategoryID" class="list-group-item @Model.CheckActiveCategory(category.CategoryID)"> @category.Name</a>
+                }
+            </div>
+        </form>
     </div>
 
     <!--Creating column for countries and their flags, along with tip tool with country information (name, game, category).-->
